--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -1,4 +1,4 @@
 <header>
 <h1> {{pageTitle}}</h1>
-<span><a href="/">Home</a> <a href="/about">About</a></span> <a href="/proejct">Projects</a></span>
+<span><a href="/">Home</a> <a href="/about">About</a></span> <a href="/project">Projects</a></span>
 </header>
