--- a/views/project.hbs
+++ b/views/project.hbs
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>About Page</title>
+  <title>Project Page</title>
 </head>
 <body>
   {{> header}}
